tests/NormalTests/paczka1/fuzzy1/52886739.err
Error in line 1: HYw A832 93,0
Error in line 12: A263 S882 38,6
Error in line 27: idR A263 218,1
Error in line 28: HYw S882 84,8
